# LibTorch-VGG4

./: CMakeLists.txt  README.md  vgginference.cpp
